# sunspot

./: README.md
.github/workflows/: ci.yml
gnark-solana/crates/verifier-bin/src/: lib.rs
gnark-solana/crates/verifier-lib/: Cargo.toml
gnark-solana/crates/verifier-lib/src/: lib.rs  proof.rs  syscalls.rs  verifier.rs  verifier_test.rs  vk.rs
gnark-solana/example/program/src/: lib.rs
go/acir/: acir.go  circuit.go
go/acir/black_box_func/: aes128encrypt_test.go  and.go  and_test.go  black_box_func_call.go  blake2s_test.go  blake3_test.go  ecdsa_secp256k1.go  ecdsa_secp256r1.go  embedded_curve_add.go  function_input.go  function_input_test.go  multi_scalar_mul.go  poseidon2permutation.go  range.go  recursive_aggregation.go  xor.go
go/acir/brillig/opcodes/: brillig_opcode.go  jump_if.go
go/acir/expression/: expression_width.go
go/acir/memory_op/: memory_op.go  memory_op_test.go
go/bn254/: bn254.go
testgen/: Cargo.toml
testgen/src/black_box_func/: aes128encrypt.rs  and.rs  blake2s.rs  blake3.rs  function_input.rs
testgen/src/brillig/opcodes/: mod.rs
testgen/src/opcodes/: memory_op.rs
